feat: Adicionar rota e controlador do servidor para testar conexão
